tests/machine/x/fs/group_by_sort.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/group_by_sort.fs(6,33): error FS0010: Unexpected keyword 'val' in expression

/workspace/mochi/tests/machine/x/fs/group_by_sort.fs(6,32): error FS0583: Unmatched '('

/workspace/mochi/tests/machine/x/fs/group_by_sort.fs(6,62): error FS0010: Unexpected keyword 'val' in expression

/workspace/mochi/tests/machine/x/fs/group_by_sort.fs(6,61): error FS0583: Unmatched '('

/workspace/mochi/tests/machine/x/fs/group_by_sort.fs(6,91): error FS0010: Unexpected keyword 'val' in expression

/workspace/mochi/tests/machine/x/fs/group_by_sort.fs(6,90): error FS0583: Unmatched '('

/workspace/mochi/tests/machine/x/fs/group_by_sort.fs(6,120): error FS0010: Unexpected keyword 'val' in expression

/workspace/mochi/tests/machine/x/fs/group_by_sort.fs(6,119): error FS0583: Unmatched '('

/workspace/mochi/tests/machine/x/fs/group_by_sort.fs(7,94): error FS0599: Missing qualification after '.'

/workspace/mochi/tests/machine/x/fs/group_by_sort.fs(7,95): error FS0010: Unexpected keyword 'val' in expression. Expected '->' or other token.

/workspace/mochi/tests/machine/x/fs/group_by_sort.fs(7,103): error FS0010: Unexpected symbol ']' in expression. Expected '->' or other token.

/workspace/mochi/tests/machine/x/fs/group_by_sort.fs(7,166): error FS0599: Missing qualification after '.'

/workspace/mochi/tests/machine/x/fs/group_by_sort.fs(7,167): error FS0010: Unexpected keyword 'val' in expression. Expected '->' or other token.
